# BankOps

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  FAQ.md  README.md  codecov.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
config/: logging.ini
docs/: DEVELOPER.md  user_manual.md
src/: __init__.py  main.py
src/controllers/: base_controller.py  dashboard_controller.py  login_controller.py  main_window_controller.py  transaction_controller.py
src/core/: account_management.py
src/models/: account_model.py  dashboard_model.py  login_model.py  main_window_model.py  transaction_model.py
src/services/: api_client_service.py  session_manager.py
src/ui/designs/: Transactions.ui  dashboard.ui  icons.qrc  login_window.ui  main_window.ui
src/ui/plugins/: profile_widget.py  registerprofilewidget.py  resources_rc.py
src/ui/plugins/resources/: resources.qrc  resources_rc.py
src/ui/plugins/widgets/: account_card_widget.py  profile_widget.py  summary_card_widget.py  transaction_table_widget.py
src/views/: dashboard_view.py  login_view.py  main_window.py  main_window_view.py  transaction_view.py
tests/: test_api_client_service.py  test_login_view.py  test_main_window_view.py  test_session_manager.py
tests/core/: test_account_management.py
